[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://art/effects/explosion.png" type="Texture" id=2]
[ext_resource path="res://art/ships/enemy-small.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22, 15 )

[sub_resource type="Animation" id=1]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.8025 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fly"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.378929, 0.34151, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.552941, 0.160784, 0.160784, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
rotation = -1.5708
script = ExtResource( 1 )
faction = 1

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="ExplosionSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 5

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 5 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 1 )
anims/fly = SubResource( 2 )
anims/hit = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.198602, 0.397209 )
scale = Vector2( 2.29095, 2.1122 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 0, 25 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
